<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="cloud.workingtitle.qwizzler.QuizActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <ScrollView
        android:isScrollContainer="false"
        android:id="@+id/scroll_view_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:visibility="visible">

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:text="@string/score_button_text"
            android:id="@+id/get_score_button"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:enabled="false"
                android:id="@+id/hint_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/get_hint_button_text" />

            <Button
                android:enabled="false"
                android:id="@+id/check_answer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/check_answer_button_text" />

        </LinearLayout>

        <LinearLayout

            android:id="@+id/prev_next_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <Button
                android:enabled="false"
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/previous_button_text" />

            <Button
                android:enabled="false"
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/next_button_text" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
